@@ -33,6 +33,7 @@ Version 5.6.0 (TBD)
     Fixed an issue where menus would incorrectly collapse in small containers #TINY-3321
     Fixed some minor memory leaks that prevented garbage collection for editor instances #TINY-6570
     Fixed resizing a `responsive` table not working when using the column resize handles #TINY-6601
+    Fixed incorrectly calculating table `col` widths when resizing responsive tables #TINY-6646
     Fixed an issue where spaces were not preserved in pre-blocks when getting text content #TINY-6448
     Fixed a regression that caused the selection to be difficult to see in tables with backgrounds #TINY-6495
 Version 5.5.1 (2020-10-01)
